--- a/css/style.css
+++ b/css/style.css
@@ -133,7 +133,7 @@ p {
     -webkit-border-radius: 8;
     -moz-border-radius: 8;
     border-radius: 8px;
-    font-family: Arial;
+    font-family: 'Montserrat', sans-serif;
     color: #ffffff;
     font-size: 20px;
     width: 150px;
